--- a/doc/install.tex
+++ b/doc/install.tex
@@ -103,6 +103,7 @@ To use the {\ACE} Package you have to request it explicitly.  This  is
 done by calling
 
 \beginexample
+gap> RequirePackage( "ace" );
 #I      The ACE (Advanced Coset Enumerator) Package
 #I    C code by George Havas <havas@csee.uq.edu.au> and
 #I              Colin Ramsay <cram@csee.uq.edu.au>
