--- a/doc/install.tex
+++ b/doc/install.tex
@@ -105,10 +105,10 @@ done by calling
 \beginexample
 gap> RequirePackage( "ace" );
 #I      The ACE (Advanced Coset Enumerator) Package
-#I    C code by George Havas <havas@csee.uq.edu.au> and
-#I              Colin Ramsay <cram@csee.uq.edu.au>
+#I    C code by George Havas <havas@itee.uq.edu.au> and
+#I              Colin Ramsay <cram@itee.uq.edu.au>
 #I                   ACE binary version: 3.001
-#I    GAP code by Greg Gamble <gregg@csee.uq.edu.au> and
+#I    GAP code by Greg Gamble <gregg@itee.uq.edu.au> and
 #I           Alexander Hulpke <hulpke@math.colostate.edu>
 #I                   ACE package version: 3.003
 #I  
