--- a/doc/manual.tex
+++ b/doc/manual.tex
@@ -33,7 +33,8 @@
   \centerline{\secfont by}\vfill
   \centerline{\secfont George Havas and Colin Ramsay}\medskip
   \centerline{Centre for Discrete Mathematics and Computing}\medskip
-  \centerline{Department of Computer Science and Electrical Engineering}\medskip
+  \centerline{Department of Information Technology and Electrical Engineering}
+  \medskip
   \centerline{The University of Queensland, St.~Lucia 4072, Australia}
   \bigskip
   \centerline{{\GAP} interface code by}\medskip
@@ -43,10 +44,10 @@
   \centerline{and}\medskip
   \centerline{\secfont Greg Gamble}\medskip
   \centerline{Centre for Discrete Mathematics and Computing} \medskip
-  \centerline{Department of Computer Science and Electrical Engineering}
+  \centerline{Department of Information Technology and Electrical Engineering}
   \medskip
   \centerline{The University of Queensland, St.~Lucia 4072, Australia}\medskip
-  \centerline{\secfont email: gregg@csee.uq.edu.au}
+  \centerline{\secfont email: gregg@itee.uq.edu.au}
   \vfill
   \centerline{\secfont{\Month} \Year}
 }
